# hw07-group20

./: .buildinfo  Makefile  README.html  README.md  _config.yml  _toc.yml  book-requirements.txt  contribution.md  environment.yml  environment_cdc.yml  environment_cmip.yml  genindex.html  hw07-description.html  main.html  main.ipynb  objects.inv  postBuild  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  hw07-description.doctree  main.doctree
.doctrees/cesm/: README.doctree
.doctrees/helper_notes/: CMIP_EDA_bad.doctree
.doctrees/notebooks/: CESM_EDA.doctree  CMIP_EDA_old.doctree  (+1 more)
.ipynb_checkpoints/: main-checkpoint.html
analysis_data/: descriptors.bak  descriptors.dir  usa_huss.csv  usa_pr.csv  usa_tas.csv  weights.npy  ww_huss.csv  ww_pr.csv  ww_tas.csv
cesm/: README.html  README.md  setup.cfg
cesm/.pytest_cache/: README.html
cesm/cesm/: __init__.py  cesm_analyze.py  cesm_pull.py  cesm_summarize.py  cesm_viz.py
cesm/cesm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cesm/cesm/tests/: test_analyze.py  test_summarize.py
helper_notes/: CDC dtype optimization.ipynb  CMIP_EDA.ipynb  CMIP_EDA_bad.html  Testing CMIP6.ipynb  cdc data gen funcs.ipynb  cdc eda.ipynb  jake_cdc_link.txt
make_scripts/: bookgen.sh  envsetup.sh  nbexecute.py  runall.sh
notebooks/: CESM_EDA.html  CESM_EDA.ipynb  CMIP_EDA_old.html  CMIP_data_pull.ipynb  CMIP_data_testing.ipynb  California Analysis.ipynb  Pangeo_data_selection.html  Pangeo_data_selection.ipynb  United States.ipynb  United_States.html  United_States.ipynb  main.html  main.ipynb
(+36 files in other folders)
