# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = cesm
version          = attr: cesm.__version__
author           = Group 20, UC Berkeley, STAT 159/259, Spring 2022 (Michael Milazzo, Jacob Jossart, Kaichi Inoue)
author_email     = mjmilazzo@berkeley.edu
description      = A Python library to pull, clean, and analyze data from NCARs CESM
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = CESM, NCAR, CMIP, ScenarioMIP
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires  = >= 3.7
install_requires =
	numpy
	xarray
	gcsfs

